# flappy_bird_raylib

./: CMakeLists.txt  README.md
include/: bird.h  constants.h  game_state.h  nn.h  pipes.h  sprite.h
src/: bird.c  main.c  nn.c  pipes.c  sprite.c
